--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -2,14 +2,25 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/signup">Signup</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/admin">Admin</a></li>
-      <li>
-        <form action="/logout" method="POST">
-          <button>Logout</button>
-        </form>
-      </li>
+      
+      <% if(!locals.userAuth) {%>
+        <li><a href="/signup">Signup</a></li>
+        <li><a href="/login">Login</a></li>
+       <% } %>
+      
+      <% if(locals.userAdmin) {%>
+        <li><a href="/admin">Admin</a></li>
+        <% } %>
+        
+        <% if(locals.userAuth) {%>
+          <li><a href="/profile">Profile</a></li>
+          <li>
+          <form action="/logout" method="POST">
+            <button>Logout</button>
+          </form>
+        </li>
+        <% } %>
+
     </ul>
   </nav>
 </header>
